Renombrar black_week_popup.js a seasonal_popup.js y agregar estilos para canvas de carnaval

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3166,6 +3166,22 @@ body.menu-open {
     justify-content: center;
 }
 
+.carnival-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.carnival-canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 2;
+}
+
 .promo-image {
     display: block;
     width: 100%;
